# goit-pythonweb-hw-01

./: pyproject.toml  task1.py  task2.py
