[project]
name = "poetry new -"
version = "0.1.0"
description = ""
authors = [
    {name = "i3oi3ka",email = "i3oi3ka@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry new "}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
